# sightsprite

./: .gitignore  README.md  pyproject.toml
src/sightsprite/: __init__.py  capture.py  training.py
