[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sightsprite"
version = "0.1.0"
description = "Machine vision with voice alerts"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [{ name = "Eric Thomson", email = "thomson.eric@gmail.com" }]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "opencv-python",
    "matplotlib",
]

[project.urls]
Homepage = "https://github.com/EricThomson/sightsprite"

[tool.hatch.build]
packages = ["src/sightsprite"]
include = [
    "src/sightsprite",
    "src/sightsprite/assets",
]

